--- a/style.css
+++ b/style.css
@@ -11,6 +11,10 @@
       width: 100%;
       height: 0;
       padding-bottom: 100%; }
+    .chessboard .field.highlighted::before {
+      background-image: radial-gradient(circle, rgba(255, 68, 34, 0) 60%, #ff4422); }
+    .chessboard .field.active::before {
+      background-image: radial-gradient(circle, rgba(221, 221, 0, 0) 60%, #dddd00); }
   .chessboard .row:nth-child(odd) .field:nth-child(odd),
   .chessboard .row:nth-child(even) .field:nth-child(even) {
     background-color: #ffffff; }
