--- a/style.scss
+++ b/style.scss
@@ -14,6 +14,18 @@
       height: 0;
       padding-bottom: 100%;
     }
+
+    @mixin focus ($color) {
+      background-image: radial-gradient(circle, rgba($color, 0) 60%, rgba($color, 1));
+    }
+
+    &.highlighted::before {
+      @include focus(#ff4422);
+    }
+
+    &.active::before {
+      @include focus(#dddd00);
+    }
   }
 
   .row:nth-child(odd) .field:nth-child(odd),
